# rs-summer-2025-labs-jszymanska14

./: eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  test_mosaic.ipynb
geoapps/: pyproject.toml
geoapps/geoapps.egg-info/: PKG-INFO
geoapps/geoapps/lab03/: cloud_mosaic.py
notebooks/: 2013_ok.csv  2024_ok.csv  Difference.html  Diffrence.html  LST_2013.html  LST_2023.html  LST_Comparison_2013_2023.html  LST_Visualization_2023.html  Landsat_2021_krakow_map.html  NDVI.html  Vegetation.html  demo_notebook.ipynb  lab-1.ipynb  lab-2.ipynb  lab-4.ipynb  lab-5.ipynb  lab-6.ipynb  lab-7.ipynb  map.html  map2.html  mosaic_map.html
