[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoapps"
version = "0.1.0"
requires-python = ">=3.10"
description = "EO utilities for cloud-free mosaics"
authors = [
  { name = "Julia", email = "jszymanska@student.agh.edu.pl" }
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "notebooks"]
